# christophernanna-me

./: .gitignore  GEMINI.md  Procfile  README.md  app.py  history.txt  myproject.toml  notes  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: azure-webapp-deploy.yml  main_christophernanna-me.yml
christophernanna_me.egg-info/: PKG-INFO  SOURCES.txt
notes/: Configure Step-CA to Serve Requests via CNAME.md  Create a Ubuntu Cloud-init Template on Proxmox.md  Deploy Root and Intermedia Certificate Authority Certificates through Group Policy.md  Deploy a Standalone Certificate Authority (Step-CA) on Debian-based Distros.md  Hugo Deployment.md  Install Gemini-CLI on WSL2 Ubuntu.md  Request a New Certificate from a Step-CA Certificate Authority.md  Untitled.md
static/css/: input.css  output.css
templates/: about.html  base.html  blog.html  index.html  me.html  note.html  notes.html
