# This section contains metadata about the project.
[project]
# The name of the project. This is used when packaging the project.
name = "christophernanna-me"
# The version of the project.
version = "0.1.0"
# A short description of the project.
description = "Personal website and blog."
# The authors of the project.
authors = [
    {name = "Christopher Hanna", email = "chris@christophernanna.me"},
]
dependencies = [
    "Flask==3.1.2",
    "python-dotenv==1.2.1",
    "python-frontmatter==1.1.0",
    "PyYAML==6.0.3",
    "Markdown==3.10",
]

# This section contains URLs related to the project.
[project.urls]
"Homepage" = "https://christophernanna.me"

# This section defines the build system for the project.
# It tells pip how to build the project.
[build-system]
# The build tools required to build the project.
requires = ["setuptools"]
# The function that will be called to build the project.
build-backend = "setuptools.build_meta"

# This section contains configuration for the setuptools build system.
[tool.setuptools]
# This tells setuptools that the 'app.py' file is a top-level module.
py-modules = ["app"]